JSPACE-69 Schemaless metadata support.

--- a/components/com_jspace/admin/language/en-GB/en-GB.com_jspace.ini
+++ b/components/com_jspace/admin/language/en-GB/en-GB.com_jspace.ini
@@ -180,6 +180,9 @@ COM_JSPACE_RECORD_VERSION_LABEL="Revision"
 COM_JSPACE_RECORD_VERSION_DESC="Current Revision"
 COM_JSPACE_RECORD_HITS_DESC="Number of page views."
 
+COM_JSPACE_RECORD_SCHEMA_SCHEMALESS_LABEL="[No Schema]"
+COM_JSPACE_RECORD_SCHEMA_SCHEMALESS_DESC="Users are free to create fields without adhering to a schema."
+
 COM_JSPACE_RECORD_SCHEMA_BASIC_LABEL="Basic Record"
 COM_JSPACE_RECORD_SCHEMA_BASIC_DESC="A basic record for storing metadata only."
 COM_JSPACE_RECORD_SCHEMA_BASICASSETS_LABEL="Basic Record with Assets"
@@ -234,3 +237,9 @@ COM_JSPACE_SCHEMAS_CALCULATEDSETTING="Calculated setting"
 COM_JSPACE_SCHEMA_INHERITED="Inherited"
 COM_JSPACE_SCHEMA_USE="Use"
 COM_JSPACE_SCHEMA_DONTUSE="Don't use"
+
+COM_JSPACE_ADD_DESC="Click to add more entries."
+
+COM_JSPACE_LINKS_LABEL="Web links"
+
+COM_JSPACE_RECORD_METADATASCHEMALESS_LABEL="Metadata"
