--- a/plugins/content/jspaceweblinks/language/en-GB/en-GB.plg_content_jspaceweblinks.ini
+++ b/plugins/content/jspaceweblinks/language/en-GB/en-GB.plg_content_jspaceweblinks.ini
@@ -1,2 +1,4 @@
 PLG_CONTENT_JSPACEWEBLINKS="Content - JSpace Weblinks"
 PLG_CONTENT_JSPACEWEBLINKS_XML_DESCRIPTION="Store weblinks within a JSpace record using the native Joomla! weblink component."
+
+PLG_CONTENT_JSPACEWEBLINKS_ADD="Add"
