Handle blank multifield values.

--- a/components/com_jspace/admin/language/en-GB/en-GB.com_jspace.ini
+++ b/components/com_jspace/admin/language/en-GB/en-GB.com_jspace.ini
@@ -243,3 +243,27 @@ COM_JSPACE_ADD_DESC="Click to add more entries."
 COM_JSPACE_LINKS_LABEL="Web links"
 
 COM_JSPACE_RECORD_METADATASCHEMALESS_LABEL="Metadata"
+
+COM_JSPACE_RECORD_SCHEMA_DCMI_LABEL="Dublin Core Metadata"
+COM_JSPACE_RECORD_SCHEMA_DCMI_DESC="The current Dublin Core metadata schema."
+COM_JSPACE_RECORD_METADATA_DCABSTRACT_LABEL="Abstract"
+COM_JSPACE_RECORD_METADATA_DCACCESSRIGHTS_LABEL="Access Rights"
+COM_JSPACE_RECORD_METADATA_DCACCRUALMETHOD_LABEL="Accrual Method"
+COM_JSPACE_RECORD_METADATA_DCACCRUALPERIODICITY_LABEL="Accrual Periodicity"
+COM_JSPACE_RECORD_METADATA_DCACCRUALPOLICY_LABEL="Accrual Policy"
+COM_JSPACE_RECORD_METADATA_ALTERNATIVE_LABEL="Alternative Title"
+COM_JSPACE_RECORD_METADATA_DCAUDIENCE_LABEL="Audience"
+COM_JSPACE_RECORD_METADATA_DCAVAILABLE_LABEL="Date Available"
+COM_JSPACE_RECORD_METADATA_DCBIBLIOGRAPHICCITATION_LABEL="Bibliographic Citation"
+COM_JSPACE_RECORD_METADATA_DCCONFORMSTO_LABEL="Conforms To"
+COM_JSPACE_RECORD_METADATA_DCCONTRIBUTOR_LABEL="Contributor"
+COM_JSPACE_RECORD_METADATA_DCCOVERAGE_LABEL="Coverage"
+COM_JSPACE_RECORD_METADATA_DCCREATED_LABEL="Date Created"
+
+COM_JSPACE_RECORD_SCHEMA_CRISTIN_LABEL="CRIStin-compatible Dublin Core"
+COM_JSPACE_RECORD_SCHEMA_CRISTIN_DESC="A schema for handling material harvested from the Current Research Information System In Norway (CRIStin)."
+COM_JSPACE_RECORD_METADATA_CRISTINUNITCODE_LABEL="CRIStin Unit Code"
+COM_JSPACE_RECORD_METADATA_CRISTINUNITNAME_LABEL="CRIStin Unit Name"
+COM_JSPACE_RECORD_METADATA_CRISTINISPUBLISHED_LABEL="Published in CRIStin"
+COM_JSPACE_RECORD_METADATA_CRISTINFULLTEXT_LABEL="CRIStin Full Text"
+COM_JSPACE_RECORD_METADATA_CRISTINQUALITYCODE_LABEL="CRIStin Quality Code"
