JSPACE-70 Deal with missing resumptionTokens.

--- a/plugins/content/oai/language/en-GB/en-GB.plg_content_oai.ini
+++ b/plugins/content/oai/language/en-GB/en-GB.plg_content_oai.ini
@@ -30,3 +30,5 @@ PLG_CONTENT_OAI_FIELD_HARVEST_DESC="Specify what should be harvested. Should the
 PLG_CONTENT_OAI_METADATA="Metadata only"
 PLG_CONTENT_OAI_METADATA_LINKS="Metadata and links to assets"
 PLG_CONTENT_OAI_METADATA_ASSETS="Metadata and assets"
+PLG_CONTENT_OAI_FIELD_SET_LABEL="Set"
+PLG_CONTENT_OAI_FIELD_SET_DESC="An optional set for selective harvesting. Check your OAI source for information about available sets."
