JSPACE-72 Reset/Disable harvesting.

--- a/plugins/content/oai/language/en-GB/en-GB.plg_content_oai.ini
+++ b/plugins/content/oai/language/en-GB/en-GB.plg_content_oai.ini
@@ -32,3 +32,9 @@ PLG_CONTENT_OAI_METADATA_LINKS="Metadata and links to assets"
 PLG_CONTENT_OAI_METADATA_ASSETS="Metadata and assets"
 PLG_CONTENT_OAI_FIELD_SET_LABEL="Set"
 PLG_CONTENT_OAI_FIELD_SET_DESC="An optional set for selective harvesting. Check your OAI source for information about available sets."
+
+PLG_CONTENT_OAI_FIELD_STATUS_LABEL="Status"
+PLG_CONTENT_OAI_FIELD_STATUS_DESC="Enable or disable harvesting or turn it completely off (I.e. clear all harvesting settings)."
+PLG_CONTENT_OAI_FIELD_STATUS_NOHARVEST="Do not harvest"
+PLG_CONTENT_OAI_FIELD_STATUS_DISABLED="Disabled"
+PLG_CONTENT_OAI_FIELD_STATUS_ENABLED="Enabled"
