Language translations, hide more fields.

--- a/components/com_jspace/admin/language/en-GB/en-GB.com_jspace.ini
+++ b/components/com_jspace/admin/language/en-GB/en-GB.com_jspace.ini
@@ -162,6 +162,8 @@ COM_JSPACE_RECORD_METADATA_LABEL="Metadata"
 COM_JSPACE_DATASTREAMOBJECT_METADATA_LABEL="Metadata"
 COM_JSPACE_DATASTREAMOBJECT_STREAM_LABEL="File"
 
+COM_JSPACE_RECORD_PARENT_ID="Parent Record"
+COM_JSPACE_RECORD_CSVMETADATA_LABEL="Metadata"
 COM_JSPACE_RECORD_TITLE_LABEL="Title"
 COM_JSPACE_RECORD_TITLE_DESC="A title to refer to the record by."
 COM_JSPACE_RECORD_SCHEMA_LABEL="Schema"
