JSPACE-85 Harvest via a plugin.

--- a/components/com_jspace/admin/language/en-GB/en-GB.com_jspace.ini
+++ b/components/com_jspace/admin/language/en-GB/en-GB.com_jspace.ini
@@ -208,6 +208,7 @@ COM_JSPACE_CHANGE_RECORD="Select or change record"
 COM_JSPACE_SUBMENU_CPANEL="Dashboard"
 COM_JSPACE_SUBMENU_CATEGORIES="Categories"
 COM_JSPACE_SUBMENU_RECORDS="Records"
+COM_JSPACE_SUBMENU_HARVESTS="Harvests"
 
 COM_JSPACE_ERROR_VIRUSDETECTED="Virus detected in file %s."
 COM_JSPACE_ERROR_UNABLETOLOADRECORD="Unable to load record."
@@ -269,3 +270,39 @@ COM_JSPACE_RECORD_METADATA_CRISTINUNITNAME_LABEL="CRIStin Unit Name"
 COM_JSPACE_RECORD_METADATA_CRISTINISPUBLISHED_LABEL="Published in CRIStin"
 COM_JSPACE_RECORD_METADATA_CRISTINFULLTEXT_LABEL="CRIStin Full Text"
 COM_JSPACE_RECORD_METADATA_CRISTINQUALITYCODE_LABEL="CRIStin Quality Code"
+
+COM_JSPACE_HARVESTS_HEADING_DISCOVERED="Discovery Information"
+COM_JSPACE_HARVESTS_HEADING_CREATED_BY="Created by"
+COM_JSPACE_HARVESTS_HEADING_HARVESTED="Last Harvest"
+COM_JSPACE_HARVESTS_HARVESTED_NEVER="Never"
+
+COM_JSPACE_HARVESTS_TITLE="JSpace: Harvests"
+COM_JSPACE_PAGE_ADD_HARVEST="JSpace: Add New Harvest"
+COM_JSPACE_PAGE_EDIT_HARVEST="JSpace: Edit Harvest"
+
+COM_JSPACE_HARVEST_FIELDSET_DETAILS_LABEL="Details"
+COM_JSPACE_HARVEST_FIELDSET_PUBLISHING_LABEL="Publishing"
+COM_JSPACE_HARVEST_FIELDSET_ADDITIONALSETTINGS_LABEL="Additional Settings"
+COM_JSPACE_HARVEST_URL_LABEL="URL"
+COM_JSPACE_HARVEST_URL_DESC="The url of the information you would like to harvest."
+COM_JSPACE_HARVEST_HARVESTER_LABEL="Harvester"
+COM_JSPACE_HARVEST_HARVESTER_DESC="The harvester to be used for retrieving the information. If you are unsure what to select, let JSpace auto-discover the harvester for you."
+COM_JSPACE_HARVEST_DISCOVERY_URL_LABEL="Discovered Url"
+COM_JSPACE_HARVEST_DISCOVERY_URL_DESC="The url that has been discovered by the harvester."
+COM_JSPACE_HARVEST_DISCOVERY_TYPE_LABEL="Discovered Type"
+COM_JSPACE_HARVEST_DISCOVERY_TYPE_DESC="The type detected."
+COM_JSPACE_HARVEST_CREATED_BY_LABEL="Created by"
+COM_JSPACE_HARVEST_CREATED_BY_DESC="The user who created the harvest."
+COM_JSPACE_HARVEST_DEFAULT_STATE_LABEL="Default State"
+COM_JSPACE_HARVEST_DEFAULT_STATE_DESC="Sets the state of each harvested item."
+COM_JSPACE_HARVEST_DEFAULT_LANGUAGE_LABEL="Default Language"
+COM_JSPACE_HARVEST_DEFAULT_LANGUAGE_DESC="Sets the language of each harvested item."
+COM_JSPACE_HARVEST_DEFAULT_ACCESS_LABEL="Default Access"
+COM_JSPACE_HARVEST_DEFAULT_ACCESS_DESC="Sets the access of each harvested item."
+COM_JSPACE_HARVEST_DISCOVER_NOT_PERMITTED="You do not have the correct permissions to execute a discovery."
+COM_JSPACE_HARVEST_DISCOVER_FAILED="No valid harvest could be discovered."
+COM_JSPACE_HARVEST_DISCOVER_SUCCESS="Harvest url successfully discovered."
+
+COM_JSPACE_HARVEST_BUTTON_DISCOVER="Discover"
+COM_JSPACE_HARVEST_BUTTON_REDISCOVER="Rediscover"
+COM_JSPACE_DISCOVER_NOT_PERMITTED="You are not permitted to discover a harvesting url."
