--- a/components/com_jspace/admin/language/en-GB/en-GB.com_jspace.sys.ini
+++ b/components/com_jspace/admin/language/en-GB/en-GB.com_jspace.sys.ini
@@ -17,3 +17,4 @@ COM_JSPACE_TREE_LAYOUT_DESC="Display categories in a tree structure."
 COM_JSPACE_CPANEL="Dashboard"
 COM_JSPACE_CATEGORIES="Categories"
 COM_JSPACE_RECORDS="Records"
+COM_JSPACE_HARVESTS="Harvests"
