--- a/components/com_jspace/admin/language/en-GB/en-GB.com_jspace.ini
+++ b/components/com_jspace/admin/language/en-GB/en-GB.com_jspace.ini
@@ -134,6 +134,8 @@ COM_JSPACE_PAGE_EDIT_RECORD="JSpace: Edit Record"
 COM_JSPACE_RECORDS_HEADING_ASSOCIATION="Association"
 COM_JSPACE_RECORDS_HEADING_CREATED_BY="Contributed By"
 COM_JSPACE_RECORDS_PARENT_TITLE_LABEL="Parent"
+COM_JSPACE_RECORDS_REBUILD_SUCCESS="Rebuild successful"
+COM_JSPACE_RECORDS_REBUILD_FAILURE="Rebuild failed"
 
 COM_JSPACE_N_ITEMS_CHECKED_IN_0="No record successfully checked in"
 COM_JSPACE_N_ITEMS_CHECKED_IN_1="%d record successfully checked in"
