--- a/components/com_jspace/admin/language/en-GB/en-GB.com_jspace.ini
+++ b/components/com_jspace/admin/language/en-GB/en-GB.com_jspace.ini
@@ -2,8 +2,10 @@ JSPACE="JSpace"
 COM_JSPACE="JSpace"
 COM_JSPACE_XML_DESCRIPTION="The JSpace component provides a method for displaying digital assets from an external repository system using the RESTful API."
 
-COM_JSPACE_FIELDSET_GENERAL_LABEL="JSpace"
-COM_JSPACE_FIELDSET_GENERAL_DESC="General JSpace settings."
+COM_JSPACE_FIELDSET_RECORDS_LABEL="Records"
+COM_JSPACE_FIELDSET_RECORDS_DESC="These settings apply for record layouts unless they are changed for a specific menu item."
+COM_JSPACE_FIELDSET_EDITING_LAYOUT_LABEL="Editing Layout"
+COM_JSPACE_FIELDSET_EDITING_LAYOUT_DESC="These options control the layout of the record editing page."
 COM_JSPACE_FIELDSET_STORAGE_LABEL="Asset Storage"
 COM_JSPACE_FIELDSET_STORAGE_DESC="Asset storage settings."
 COM_JSPACE_FIELDSET_EXTRACTION_LABEL="Asset Extraction"
@@ -182,7 +184,6 @@ COM_JSPACE_RECORD_CREATED_LABEL="Created Date"
 COM_JSPACE_RECORD_MODIFIED_DESC="The date and time that the record was last modified."
 COM_JSPACE_RECORD_VERSION_LABEL="Revision"
 COM_JSPACE_RECORD_VERSION_DESC="Current Revision"
-COM_JSPACE_RECORD_HITS_DESC="Number of page views."
 
 COM_JSPACE_RECORD_SCHEMA_SCHEMALESS_LABEL="[No Schema]"
 COM_JSPACE_RECORD_SCHEMA_SCHEMALESS_DESC="Users are free to create fields without adhering to a schema."
@@ -308,3 +309,16 @@ COM_JSPACE_HARVEST_DISCOVER_SUCCESS="Harvest url successfully discovered."
 COM_JSPACE_HARVEST_BUTTON_DISCOVER="Discover"
 COM_JSPACE_HARVEST_BUTTON_REDISCOVER="Rediscover"
 COM_JSPACE_DISCOVER_NOT_PERMITTED="You are not permitted to discover a harvesting url."
+
+COM_JSPACE_FIELD_SELECT_RECORD_LABEL="Select a record"
+COM_JSPACE_FIELD_SELECT_RECORD_DESC="Select the desired record from the list."
+COM_JSPACE_ATTRIBS_RECORD_SETTINGS_LABEL="Options"
+COM_JSPACE_RECORD_SHOW_PARENT_LABEL="Show Parent Record"
+COM_JSPACE_RECORD_SHOW_PARENT_DESC="If set to Show, the parent of displayed record will show."
+COM_JSPACE_RECORD_LINK_PARENT_LABEL="Link Parent Record"
+COM_JSPACE_RECORD_LINK_PARENT_DESC="If set to Yes, and if Show Parent is set to 'Show', the Parent Record Title will link to a the parent record display."
+COM_JSPACE_SHOW_EMPTY_CATEGORIES_DESC="If set to Show, empty categories will display. A category is only empty if it has no records or subcategories."
+COM_JSPACE_FIELD_CONFIG_CAT_SHOWNUMBERS_LABEL="# JSpace Records"
+COM_JSPACE_FIELD_CONFIG_CAT_SHOWNUMBERS_DESC="Show/Hide the number of JSpace records in each Category"
+COM_JSPACE_FIELD_CONFIG_LINKDESCRIPTION_LABEL="Links description"
+COM_JSPACE_FIELD_CONFIG_LINKDESCRIPTION_DESC="Show/Hide the links description"
