--- a/components/com_jspace/admin/language/en-GB/en-GB.com_jspace.sys.ini
+++ b/components/com_jspace/admin/language/en-GB/en-GB.com_jspace.sys.ini
@@ -2,17 +2,15 @@ JSPACE="JSpace"
 COM_JSPACE="JSpace"
 COM_JSPACE_XML_DESCRIPTION="The JSpace component provides a method for displaying digital assets from a external repository system using the RESTful API."
 
-COM_JSPACE_ITEM_VIEW_DEFAULT_TITLE="Single Repository Item"
-COM_JSPACE_ITEM_LAYOUT_TITLE="Single Repository Item"
-COM_JSPACE_ITEM_LAYOUT_DESC="Display a single repository item. Used for displaying an SEF url for each item."
-
-COM_JSPACE_CATEGORIES_VIEW_DEFAULT_TITLE="Category List"
-COM_JSPACE_CATEGORIES_LAYOUT_TITLE="Category List"
-COM_JSPACE_CATEGORIES_LAYOUT_DESC="Display a list of categories. Categories are groupings of items, presented in a generic way."
-
-COM_JSPACE_TREE_VIEW_DEFAULT_TITLE="Category Tree"
-COM_JSPACE_TREE_LAYOUT_TITLE="Category Tree"
-COM_JSPACE_TREE_LAYOUT_DESC="Display categories in a tree structure."
+COM_JSPACE_CATEGORIES_VIEW_DEFAULT_OPTION="Default"
+COM_JSPACE_CATEGORIES_VIEW_DEFAULT_TITLE="List All Categories"
+COM_JSPACE_CATEGORIES_VIEW_DEFAULT_DESC="Shows a list of all the record categories within a category."
+COM_JSPACE_CATEGORY_VIEW_DEFAULT_DESC="Displays a list of records in a category."
+COM_JSPACE_CATEGORY_VIEW_DEFAULT_OPTION="List"
+COM_JSPACE_CATEGORY_VIEW_DEFAULT_TITLE="Category List"
+COM_JSPACE_RECORD_VIEW_DEFAULT_TITLE="Single Record"
+COM_JSPACE_RECORD_VIEW_DEFAULT_DESC="Displays a single record."
+COM_JSPACE_RECORD_VIEW_DEFAULT_OPTION="Default"
 
 COM_JSPACE_CPANEL="Dashboard"
 COM_JSPACE_CATEGORIES="Categories"
