--- a/components/com_jspace/site/language/en-GB/en-GB.com_jspace.ini
+++ b/components/com_jspace/site/language/en-GB/en-GB.com_jspace.ini
@@ -1,38 +1,13 @@
-COM_JSPACE_ITEM_NOT_FOUND="Item not found."
-COM_JSPACE_ITEM_METADATA_AUTHOR="Author"
-COM_JSPACE_ITEM_METADATA_CONTRIBUTOR="Contributor"
-COM_JSPACE_ITEM_METADATA_DATE_ACCESSIONED="Date accessioned"
-COM_JSPACE_ITEM_METADATA_DATE_AVAILABLE="Date available"
-COM_JSPACE_ITEM_METADATA_DATE_ISSUED="Date issued"
-COM_JSPACE_ITEM_METADATA_MEDIA_TYPE="Media type"
-COM_JSPACE_ITEM_METADATA_INSTITUTION="Institution"
-COM_JSPACE_ITEM_METADATA_TITLE="Title"
-COM_JSPACE_ITEM_METADATA_MATERIAL_TYPE="Material type"
-COM_JSPACE_ITEM_METADATA_MEDIA_TYPE_IMAGE_COLOURMODE="Image colour mode"
-COM_JSPACE_ITEM_METADATA_MEDIA_TYPE_IMAGE_COLOURDEPTH="Image colour depth"
-COM_JSPACE_ITEM_METADATA_DESCRIPTION="Description"
-COM_JSPACE_ITEM_METADATA_SUBJECT="Subject"
-COM_JSPACE_ITEM_METADATA_MEDIA_TYPE_AUDIO_BITRATE="Audio bitrate"
-COM_JSPACE_ITEM_METADATA_MEDIA_TYPE_AUDIO_FREQUENCY="Audio frequency"
-COM_JSPACE_ITEM_METADATA_MEDIA_TYPE_AUDIO_CHANNELS="Audio channels"
+COM_JSPACE_DEFAULT_PAGE_TITLE="JSpace Categories"
+COM_JSPACE_NUM_ITEMS="Record Count:"
 
-COM_JSPACE_ITEM_BUNDLE_TYPE_ORIGINAL="Original"
-COM_JSPACE_ITEM_BUNDLE_TYPE_ITEM_THUMBNAIL="Thumbnail"
-COM_JSPACE_ITEM_BUNDLE_TYPE_ITEM_LETTERBOX="Letterbox"
-COM_JSPACE_ITEM_BUNDLE_TYPE_PREVIEW="Preview"
-COM_JSPACE_ITEM_BUNDLE_TYPE_THUMBNAIL="Thumbnail"
-
-COM_JSPACE_CATEGORY_ROOT_NAME="Category Root"
-
-COM_JSPACE_COMMUNITIES_HEADING="DSpace Communities"
-COM_JSPACE_COMMUNITIES_SUBCOMMUNITIES_IN_COMMUNITY="Sub Communities"
-COM_JSPACE_COMMUNITIES_COLLECTIONS_IN_COMMUNITY="Collections"
-COM_JSPACE_COMMUNITIES_RECENT_SUBMISSIONS="Latest Submissions"
-COM_JSPACE_DC_TITLE_LABEL="Title"
-COM_JSPACE_DC_CREATOR_LABEL="Creator"
-COM_JSPACE_DC_ABSTRACT_LABEL="Abstract"
-COM_JSPACE_DC_HANDLE_LABEL="Handle"
-COM_JSPACE_DC_SUBJECT_LABEL="Subject"
-COM_JSPACE_DC_COLLECTION_LABEL="Appears in Collection"
-COM_JSPACE_BITSTREAM_PREVIEW="Preview"
-COM_JSPACE_BITSTREAM_DOWNLOAD="Download"
+COM_JSPACE_RECORD_INFO="Details"
+COM_JSPACE_RECORD_CREATED_BY="Originally contributed by: %s"
+COM_JSPACE_RECORD_CATEGORY="Category: %s"
+COM_JSPACE_RECORD_PARENT="Parent: %s"
+COM_JSPACE_CREATED_DATE_ON="Created: %s"
+COM_JSPACE_LAST_UPDATED="Last Updated: %s"
+COM_JSPACE_PUBLISHED_DATE_ON="Published: %s"
+COM_JSPACE_READ_MORE="Log in to view more"
+COM_JSPACE_NO_RECORDS="No records found."
+COM_JSPACE_ERROR_RECORD_NOT_FOUND="No record found."
