JSPACE-86 Complete rework of crosswalk.

--- a/components/com_jspace/admin/language/en-GB/en-GB.com_jspace.ini
+++ b/components/com_jspace/admin/language/en-GB/en-GB.com_jspace.ini
@@ -167,7 +167,7 @@ COM_JSPACE_DATASTREAMOBJECT_METADATA_LABEL="Metadata"
 COM_JSPACE_DATASTREAMOBJECT_STREAM_LABEL="File"
 
 COM_JSPACE_RECORD_PARENT_ID="Parent Record"
-COM_JSPACE_RECORD_CSVMETADATA_LABEL="Metadata"
+COM_JSPACE_RECORD_METADATAPAIRS_LABEL="Metadata"
 COM_JSPACE_RECORD_TITLE_LABEL="Title"
 COM_JSPACE_RECORD_TITLE_DESC="A title to refer to the record by."
 COM_JSPACE_RECORD_SCHEMA_LABEL="Schema"
@@ -302,6 +302,8 @@ COM_JSPACE_HARVEST_DEFAULT_LANGUAGE_LABEL="Default Language"
 COM_JSPACE_HARVEST_DEFAULT_LANGUAGE_DESC="Sets the language of each harvested item."
 COM_JSPACE_HARVEST_DEFAULT_ACCESS_LABEL="Default Access"
 COM_JSPACE_HARVEST_DEFAULT_ACCESS_DESC="Sets the access of each harvested item."
+COM_JSPACE_HARVEST_HARVESTED_LABEL="Last Harvested"
+COM_JSPACE_HARVEST_HARVESTED_DESC="The date and time of the last harvest."
 COM_JSPACE_HARVEST_DISCOVER_NOT_PERMITTED="You do not have the correct permissions to execute a discovery."
 COM_JSPACE_HARVEST_DISCOVER_FAILED="No valid harvest could be discovered."
 COM_JSPACE_HARVEST_DISCOVER_SUCCESS="Harvest url successfully discovered."
@@ -309,6 +311,10 @@ COM_JSPACE_HARVEST_DISCOVER_SUCCESS="Harvest url successfully discovered."
 COM_JSPACE_HARVEST_BUTTON_DISCOVER="Discover"
 COM_JSPACE_HARVEST_BUTTON_REDISCOVER="Rediscover"
 COM_JSPACE_DISCOVER_NOT_PERMITTED="You are not permitted to discover a harvesting url."
+PLG_JSPACE_HARVEST_FREQUENCY_LABEL="Run Harvester"
+PLG_JSPACE_HARVEST_FREQUENCY_DESC="Specify how many harvests should be executed before it is archived."
+PLG_JSPACE_HARVEST_FREQUENCY_OPTION_FOREVER="Forever"
+PLG_JSPACE_HARVEST_FREQUENCY_OPTION_ONCE="Once"
 
 COM_JSPACE_FIELD_SELECT_RECORD_LABEL="Select a record"
 COM_JSPACE_FIELD_SELECT_RECORD_DESC="Select the desired record from the list."
