JSPACE-85 JSPACE-86 Store all metadata in arrays. Restructure schemas.

--- a/components/com_jspace/admin/language/en-GB/en-GB.com_jspace.ini
+++ b/components/com_jspace/admin/language/en-GB/en-GB.com_jspace.ini
@@ -188,10 +188,12 @@ COM_JSPACE_RECORD_VERSION_DESC="Current Revision"
 COM_JSPACE_RECORD_SCHEMA_SCHEMALESS_LABEL="[No Schema]"
 COM_JSPACE_RECORD_SCHEMA_SCHEMALESS_DESC="Users are free to create fields without adhering to a schema."
 
-COM_JSPACE_RECORD_SCHEMA_BASIC_LABEL="Basic Record"
-COM_JSPACE_RECORD_SCHEMA_BASIC_DESC="A basic record for storing metadata only."
-COM_JSPACE_RECORD_SCHEMA_BASICASSETS_LABEL="Basic Record with Assets"
-COM_JSPACE_RECORD_SCHEMA_BASICASSETS_DESC="A basic record for storing metadata and one or more files."
+COM_JSPACE_RECORD_SCHEMA_RECORD_LABEL="Record"
+COM_JSPACE_RECORD_SCHEMA_RECORD_DESC="A high-level record for storing metadata, assets and weblinks. Useful as a catch-all schema for Dublin Core-based metadata."
+COM_JSPACE_RECORD_SCHEMA_BUNDLE_LABEL="Bundle"
+COM_JSPACE_RECORD_SCHEMA_BUNDLE_DESC="An asset bundle for a single file with various derivatives (preview, thumbnail)."
+COM_JSPACE_RECORD_SCHEMA_ORIGINALS_LABEL="Original Assets"
+COM_JSPACE_RECORD_SCHEMA_ORIGINALS_DESC="One or more original files."
 
 COM_JSPACE_RECORD_METADATA_TITLE_LABEL="Title"
 COM_JSPACE_RECORD_METADATA_AUTHOR_LABEL="Author"
@@ -250,24 +252,66 @@ COM_JSPACE_LINKS_LABEL="Web links"
 
 COM_JSPACE_RECORD_METADATASCHEMALESS_LABEL="Metadata"
 
-COM_JSPACE_RECORD_SCHEMA_DCMI_LABEL="Dublin Core Metadata"
-COM_JSPACE_RECORD_SCHEMA_DCMI_DESC="The current Dublin Core metadata schema."
-COM_JSPACE_RECORD_METADATA_DCABSTRACT_LABEL="Abstract"
-COM_JSPACE_RECORD_METADATA_DCACCESSRIGHTS_LABEL="Access Rights"
-COM_JSPACE_RECORD_METADATA_DCACCRUALMETHOD_LABEL="Accrual Method"
-COM_JSPACE_RECORD_METADATA_DCACCRUALPERIODICITY_LABEL="Accrual Periodicity"
-COM_JSPACE_RECORD_METADATA_DCACCRUALPOLICY_LABEL="Accrual Policy"
-COM_JSPACE_RECORD_METADATA_ALTERNATIVE_LABEL="Alternative Title"
-COM_JSPACE_RECORD_METADATA_DCAUDIENCE_LABEL="Audience"
-COM_JSPACE_RECORD_METADATA_DCAVAILABLE_LABEL="Date Available"
-COM_JSPACE_RECORD_METADATA_DCBIBLIOGRAPHICCITATION_LABEL="Bibliographic Citation"
-COM_JSPACE_RECORD_METADATA_DCCONFORMSTO_LABEL="Conforms To"
-COM_JSPACE_RECORD_METADATA_DCCONTRIBUTOR_LABEL="Contributor"
-COM_JSPACE_RECORD_METADATA_DCCOVERAGE_LABEL="Coverage"
-COM_JSPACE_RECORD_METADATA_DCCREATED_LABEL="Date Created"
+COM_JSPACE_METADATA_ABSTRACT_LABEL="Abstract"
+COM_JSPACE_METADATA_ACCESSRIGHTS_LABEL="Access Rights"
+COM_JSPACE_METADATA_ACCRUALMETHOD_LABEL="Accrual Method"
+COM_JSPACE_METADATA_ACCRUALPERIODICITY_LABEL="Accrual Periodicity"
+COM_JSPACE_METADATA_ACCRUALPOLICY_LABEL="Accrual Policy"
+COM_JSPACE_METADATA_ALTERNATIVETITLE_LABEL="Alternative Title"
+COM_JSPACE_METADATA_INTENDEDAUDIENCE_LABEL="Audience"
+COM_JSPACE_METADATA_AVAILABLE_LABEL="Date Available"
+COM_JSPACE_METADATA_BIBLIOGRAPHY_LABEL="Bibliographic Citation"
+COM_JSPACE_METADATA_CONFORMSTO_LABEL="Conforms To"
+COM_JSPACE_METADATA_CONTRIBUTOR_LABEL="Contributor"
+COM_JSPACE_METADATA_COVERAGE_LABEL="Coverage"
+COM_JSPACE_METADATA_CREATED_LABEL="Date Created"
+COM_JSPACE_METADATA_CREATOR_LABEL="Creator"
+COM_JSPACE_METADATA_DATE_LABEL="Date"
+COM_JSPACE_METADATA_DATEACCEPTED_LABEL="Date Accepted"
+COM_JSPACE_METADATA_DATECOPYRIGHTED_LABEL="Copyright Date"
+COM_JSPACE_METADATA_DATESUBMITTED_LABEL="Date Submitted"
+COM_JSPACE_METADATA_DESCRIPTION_LABEL="Description"
+COM_JSPACE_METADATA_EDUCATIONLEVEL_LABEL="Education Level"
+COM_JSPACE_METADATA_FORMAT_LABEL="Format"
+COM_JSPACE_METADATA_HASFORMAT_LABEL="Has Format"
+COM_JSPACE_METADATA_HASPART_LABEL="Has Part"
+COM_JSPACE_METADATA_HASVERSION_LABEL="Has Version"
+COM_JSPACE_METADATA_IDENTIFIER_LABEL="Identifier"
+COM_JSPACE_METADATA_INTERACTIONS_LABEL="Interactions"
+COM_JSPACE_METADATA_ISFORMATOF_LABEL="Is Format Of"
+COM_JSPACE_METADATA_ISPARTOF_LABEL="Is Part Of"
+COM_JSPACE_METADATA_ISREFERENCEDBY_LABEL="Is Referenced By"
+COM_JSPACE_METADATA_ISREPLACEDBY_LABEL="Is Replaced By"
+COM_JSPACE_METADATA_ISREQUIREDBY_LABEL="Is Required By"
+COM_JSPACE_METADATA_ISSUED_LABEL="Date Issued"
+COM_JSPACE_METADATA_ISVERSIONOF_LABEL="Is Version Of"
+COM_JSPACE_METADATA_LANGUAGE_LABEL="Language"
+COM_JSPACE_METADATA_LENGTH_LABEL="Size/Duration"
+COM_JSPACE_METADATA_LICENSE_LABEL="License"
+COM_JSPACE_METADATA_REVIEWER_LABEL="Reviewer/Moderator"
+COM_JSPACE_METADATA_MEDIUM_LABEL="Storage Medium"
+COM_JSPACE_METADATA_MODIFIED_LABEL="Modified"
+COM_JSPACE_METADATA_OWNERSHIP_LABEL="Ownership"
+COM_JSPACE_METADATA_PUBLISHER_LABEL="Published By"
+COM_JSPACE_METADATA_REFERENCES_LABEL="References"
+COM_JSPACE_METADATA_RELATION_LABEL="Relation"
+COM_JSPACE_METADATA_REPLACES_LABEL="Replaces"
+COM_JSPACE_METADATA_REQUIRES_LABEL="Requires"
+COM_JSPACE_METADATA_RIGHTS_LABEL="Rights"
+COM_JSPACE_METADATA_RIGHTSHOLDER_LABEL="Rights Holder"
+COM_JSPACE_METADATA_SOURCE_LABEL="Source"
+COM_JSPACE_METADATA_SPATIALCOVERAGE_LABEL="Location Created"
+COM_JSPACE_METADATA_KEYWORDS_LABEL="Keywords"
+COM_JSPACE_METADATA_TOC_LABEL="Table of Contents"
+COM_JSPACE_METADATA_TEMPORALCOVERAGE_LABEL="Time Created"
+COM_JSPACE_METADATA_TITLE_LABEL="Title"
+COM_JSPACE_METADATA_TYPE_LABEL="Type"
+COM_JSPACE_METADATA_PUBLISHUPDOWN_LABEL="Date Valid"
 
-COM_JSPACE_RECORD_SCHEMA_CRISTIN_LABEL="CRIStin-compatible Dublin Core"
-COM_JSPACE_RECORD_SCHEMA_CRISTIN_DESC="A schema for handling material harvested from the Current Research Information System In Norway (CRIStin)."
+COM_JSPACE_METADATA_TITLE_LABEL="Title"
+
+COM_JSPACE_RECORD_SCHEMA_CRISTIN_LABEL="CRIStin-based Information"
+COM_JSPACE_RECORD_SCHEMA_CRISTIN_DESC="A schema for specifying Current Research Information System In Norway (CRIStin) information."
 COM_JSPACE_RECORD_METADATA_CRISTINUNITCODE_LABEL="CRIStin Unit Code"
 COM_JSPACE_RECORD_METADATA_CRISTINUNITNAME_LABEL="CRIStin Unit Name"
 COM_JSPACE_RECORD_METADATA_CRISTINISPUBLISHED_LABEL="Published in CRIStin"
@@ -296,6 +340,8 @@ COM_JSPACE_HARVEST_DISCOVERY_TYPE_LABEL="Discovered Type"
 COM_JSPACE_HARVEST_DISCOVERY_TYPE_DESC="The type detected."
 COM_JSPACE_HARVEST_CREATED_BY_LABEL="Created by"
 COM_JSPACE_HARVEST_CREATED_BY_DESC="The user who created the harvest."
+COM_JSPACE_HARVEST_DEEFAULT_SCHEMA_LABEL="Default Schema"
+COM_JSPACE_HARVEST_DEEFAULT_SCHEMA_DESC="Specifies the schema to use for each harvested item. Defaults to record."
 COM_JSPACE_HARVEST_DEFAULT_STATE_LABEL="Default State"
 COM_JSPACE_HARVEST_DEFAULT_STATE_DESC="Sets the state of each harvested item."
 COM_JSPACE_HARVEST_DEFAULT_LANGUAGE_LABEL="Default Language"
