--- a/components/com_jspace/admin/language/en-GB/en-GB.com_jspace.ini
+++ b/components/com_jspace/admin/language/en-GB/en-GB.com_jspace.ini
@@ -160,8 +160,6 @@ COM_JSPACE_RECORD_DETAILS_LABEL="Details"
 COM_JSPACE_RECORD_PUBLISHING_LABEL="Publishing"
 
 COM_JSPACE_RECORD_METADATA_LABEL="Metadata"
-COM_JSPACE_DATASTREAMOBJECT_METADATA_LABEL="Metadata"
-COM_JSPACE_DATASTREAMOBJECT_STREAM_LABEL="File"
 
 COM_JSPACE_RECORD_PARENT_ID="Parent Record"
 COM_JSPACE_RECORD_METADATAPAIRS_LABEL="Metadata"
@@ -184,13 +182,14 @@ COM_JSPACE_RECORD_VERSION_DESC="Current Revision"
 
 COM_JSPACE_RECORD_SCHEMA_SCHEMALESS_LABEL="[No Schema]"
 COM_JSPACE_RECORD_SCHEMA_SCHEMALESS_DESC="Users are free to create fields without adhering to a schema."
-
-COM_JSPACE_RECORD_SCHEMA_RECORD_LABEL="Record"
-COM_JSPACE_RECORD_SCHEMA_RECORD_DESC="A high-level record for storing metadata, assets and weblinks. Useful as a catch-all schema for Dublin Core-based metadata."
+COM_JSPACE_RECORD_SCHEMA_DEFAULT_LABEL="Default (for harvesting)"
+COM_JSPACE_RECORD_SCHEMA_DEFAULT_DESC="The recommended default schema for harvesting from a flat archive."
 COM_JSPACE_RECORD_SCHEMA_BUNDLE_LABEL="Bundle"
 COM_JSPACE_RECORD_SCHEMA_BUNDLE_DESC="An asset bundle for a single file with various derivatives (preview, thumbnail)."
 COM_JSPACE_RECORD_SCHEMA_ORIGINALS_LABEL="Original Assets"
 COM_JSPACE_RECORD_SCHEMA_ORIGINALS_DESC="One or more original files."
+COM_JSPACE_RECORD_SCHEMA_RECORD_LABEL="Record"
+COM_JSPACE_RECORD_SCHEMA_RECORD_DESC="A general record for capturing metadata. A preview and thumbnail are included for displaying the record in search results and browse lists."
 
 COM_JSPACE_RECORD_METADATA_TITLE_LABEL="Title"
 COM_JSPACE_RECORD_METADATA_AUTHOR_LABEL="Author"
