--- a/plugins/content/jspaceweblinks/language/en-GB/en-GB.plg_content_jspaceweblinks.ini
+++ b/plugins/content/jspaceweblinks/language/en-GB/en-GB.plg_content_jspaceweblinks.ini
@@ -2,3 +2,6 @@ PLG_CONTENT_JSPACEWEBLINKS="Content - JSpace Weblinks"
 PLG_CONTENT_JSPACEWEBLINKS_XML_DESCRIPTION="Store weblinks within a JSpace record using the native Joomla! weblink component."
 
 PLG_CONTENT_JSPACEWEBLINKS_ADD="Add"
+
+PLG_CONTENT_JSPACEWEBLINKS_URL_LABEL="URL"
+PLG_CONTENT_JSPACEWEBLINKS_TITLE_LABEL="Title"
