JSPACE-93. Restructure metadata to handle standard joomla form fields.

--- a/components/com_jspace/admin/language/en-GB/en-GB.com_jspace.ini
+++ b/components/com_jspace/admin/language/en-GB/en-GB.com_jspace.ini
@@ -370,3 +370,5 @@ COM_JSPACE_FIELD_CONFIG_CAT_SHOWNUMBERS_LABEL="# JSpace Records"
 COM_JSPACE_FIELD_CONFIG_CAT_SHOWNUMBERS_DESC="Show/Hide the number of JSpace records in each Category"
 COM_JSPACE_FIELD_CONFIG_LINKDESCRIPTION_LABEL="Links description"
 COM_JSPACE_FIELD_CONFIG_LINKDESCRIPTION_DESC="Show/Hide the links description"
+
+COM_JSPACE_IDENTIFIERLIST_LABEL="Identifiers"
