--- a/components/com_jspace/admin/language/en-GB/en-GB.com_jspace.ini
+++ b/components/com_jspace/admin/language/en-GB/en-GB.com_jspace.ini
@@ -303,8 +303,14 @@ COM_JSPACE_METADATA_TEMPORALCOVERAGE_LABEL="Time Created"
 COM_JSPACE_METADATA_TITLE_LABEL="Title"
 COM_JSPACE_METADATA_TYPE_LABEL="Type"
 COM_JSPACE_METADATA_PUBLISHUPDOWN_LABEL="Date Valid"
+COM_JSPACE_METADATA_LICENSE_LABEL="License"
+COM_JSPACE_METADATA_LICENSE_DESC="Specify the rights of the record. Copy and paste an existing license such as those provided by creative commons or specify your own."
 
-COM_JSPACE_METADATA_TITLE_LABEL="Title"
+COM_JSPACE_ASSET_TITLE_LABEL="Title"
+COM_JSPACE_ASSET_CONTENTTYPE_LABEL="Content Type"
+COM_JSPACE_ASSET_CONTENTLENGTH_LABEL="File Size"
+COM_JSPACE_ASSET_HASH_LABEL="Checksum"
+COM_JSPACE_ASSET_METADATA_LABEL="Metadata"
 
 COM_JSPACE_RECORD_SCHEMA_CRISTIN_LABEL="CRIStin-based Information"
 COM_JSPACE_RECORD_SCHEMA_CRISTIN_DESC="A schema for specifying Current Research Information System In Norway (CRIStin) information."
