Install core extensions with JSpace component.

--- a/components/com_jspace/admin/language/en-GB/en-GB.com_jspace.sys.ini
+++ b/components/com_jspace/admin/language/en-GB/en-GB.com_jspace.sys.ini
@@ -1,6 +1,6 @@
 JSPACE="JSpace"
 COM_JSPACE="JSpace"
-COM_JSPACE_XML_DESCRIPTION="The JSpace component provides a method for displaying digital assets from a external repository system using the RESTful API."
+COM_JSPACE_XML_DESCRIPTION="The JSpace component introduces archiving and digital document management to the Joomla! platform. Describe your archived information using high-level metadata, diseminate your archived information using standards-compliant tools and collate public information from various sources."
 
 COM_JSPACE_CATEGORIES_VIEW_DEFAULT_OPTION="Default"
 COM_JSPACE_CATEGORIES_VIEW_DEFAULT_TITLE="List All Categories"
@@ -16,3 +16,5 @@ COM_JSPACE_CPANEL="Dashboard"
 COM_JSPACE_CATEGORIES="Categories"
 COM_JSPACE_RECORDS="Records"
 COM_JSPACE_HARVESTS="Harvests"
+
+COM_JSPACE_CLI_DESCRIPTION="Command line tools for managing JSpace information."
