--- a/components/com_jspace/admin/language/en-GB/en-GB.com_jspace.ini
+++ b/components/com_jspace/admin/language/en-GB/en-GB.com_jspace.ini
@@ -1,6 +1,6 @@
 JSPACE="JSpace"
 COM_JSPACE="JSpace"
-COM_JSPACE_XML_DESCRIPTION="The JSpace component provides a method for displaying digital assets from an external repository system using the RESTful API."
+COM_JSPACE_XML_DESCRIPTION="The JSpace component introduces archiving and digital document management to the Joomla! platform. Describe your archived information using high-level metadata, diseminate your archived information using standards-compliant tools and collate public information from various sources."
 
 COM_JSPACE_FIELDSET_RECORDS_LABEL="Records"
 COM_JSPACE_FIELDSET_RECORDS_DESC="These settings apply for record layouts unless they are changed for a specific menu item."
