--- a/libraries/jspace/language/en-GB/en-GB.lib_jspace.sys.ini
+++ b/libraries/jspace/language/en-GB/en-GB.lib_jspace.sys.ini
@@ -1,1 +1,2 @@
-LIB_JSPACE_XML_DESCRIPTION="The JSpace library provides functionality for connecting to various repository applications."
+LIB_JSPACE="JSpace Library"
+LIB_JSPACE_XML_DESCRIPTION="The JSpace library provides a programming interface for the JSpace archiving system."
