JSPACE-95 Simple control panel with general information about JSpace.

--- a/plugins/content/jspaceassetstore/language/en-GB/en-GB.plg_content_jspaceassetstore.ini
+++ b/plugins/content/jspaceassetstore/language/en-GB/en-GB.plg_content_jspaceassetstore.ini
@@ -13,3 +13,6 @@ PLG_CONTENT_JSPACEASSETSTORE_ERROR_CREATE_STORAGE_PATH="Asset store plugin faile
 PLG_CONTENT_JSPACEASSETSTORE_ERROR_COPY_FILE="Could not copy asset store file %s to permanent storage."
 
 PLG_CONTENT_JSPACEASSETSTORE_DOWNLOAD_LABEL="Download"
+
+PLG_CONTENT_JSPACEASSETSTORE_PATH_NOT_EXISTS="The storage path is not accessible. Either create one or ensure the current one exists and is writeable."
+PLG_CONTENT_JSPACEASSETSTORE_PATH_NOT_RECOMMENDED="For security reasons, it is not recommended that the local storage path resides in the same directory as your Joomla! installation."
