--- a/components/com_jspace/admin/language/en-GB/en-GB.com_jspace.ini
+++ b/components/com_jspace/admin/language/en-GB/en-GB.com_jspace.ini
@@ -17,16 +17,16 @@ COM_JSPACE_STORAGE_UPLOAD_MIME_LABEL="Legal MIME Types"
 COM_JSPACE_STORAGE_UPLOAD_MIME_DESC="A comma seperated list of mime types. Can include regular expressions."
 
 COM_JSPACE_EXTRACTION_EXTRACT_LABEL="Extract File Metadata"
-COM_JSPACE_EXTRACTION_EXTRACT_DESC="Yes to extract the file metadata, no otherwise. It is recommended file metadata 
+COM_JSPACE_EXTRACTION_EXTRACT_DESC="Yes to extract the file metadata, no otherwise. It is recommended file metadata
 extraction is set up."
 COM_JSPACE_EXTRACTION_EXTRACTOR_LABEL="Extractor"
-COM_JSPACE_EXTRACTION_EXTRACTOR_DESC="Extract metadata from the file using either a dedicated extraction server (Apache 
+COM_JSPACE_EXTRACTION_EXTRACTOR_DESC="Extract metadata from the file using either a dedicated extraction server (Apache
 Tika) or the existing Solr server."
 COM_JSPACE_EXTRACTION_EXTRACTOR_LOCAL="Local Tika"
 COM_JSPACE_EXTRACTION_EXTRACTOR_REMOTE="Remote Tika"
 COM_JSPACE_EXTRACTION_EXTRACTOR_SOLR="Solr Server"
 COM_JSPACE_EXTRACTION_LOCALTIKA_APPPATH_LABEL="Local Tika Application path"
-COM_JSPACE_EXTRACTION_LOCALTIKA_APPPATH_DESC="The path to the Tika executable. Only used if the extractor is set to 
+COM_JSPACE_EXTRACTION_LOCALTIKA_APPPATH_DESC="The path to the Tika executable. Only used if the extractor is set to
 Local Tika."
 COM_JSPACE_EXTRACTION_REMOTETIKA_HOST_LABEL="Remote Tika Host"
 COM_JSPACE_EXTRACTION_REMOTETIKA_HOST_DESC="The Tika host URL. Only used if the extractor is set to Remote Tika."
@@ -224,7 +224,7 @@ COM_JSPACE_ERROR_MOVE_FILE="Unable to move file."
 COM_JSPACE_ERROR_PUBLISHDOWN_LT="The Finish Publishing date must be newer than Start Publishing."
 COM_JSPACE_ERROR_UPLOAD_DUPLICATE="Duplicate asset %s uploaded."
 
-COM_JSPACE_ERROR_NODERIVATIVE="No derivative specified for %s." 
+COM_JSPACE_ERROR_NODERIVATIVE="No derivative specified for %s."
 
 COM_JSPACE_FORMFIELD_ASSET_DOWNLOAD_TITLE="Download"
 COM_JSPACE_FORMFIELD_ASSET_METADATA_TITLE="Use Metadata"
@@ -378,3 +378,17 @@ COM_JSPACE_FIELD_CONFIG_LINKDESCRIPTION_LABEL="Links description"
 COM_JSPACE_FIELD_CONFIG_LINKDESCRIPTION_DESC="Show/Hide the links description"
 
 COM_JSPACE_IDENTIFIERLIST_LABEL="Identifiers"
+
+COM_JSPACE_STATUS_LABEL="Statistics"
+COM_JSPACE_STATUS_RECORD_COUNT_LABEL="Total Records"
+COM_JSPACE_STATUS_ASSET_COUNT_LABEL="Total Assets"
+COM_JSPACE_STATUS_ASSET_SIZE_LABEL="Storage Used"
+COM_JSPACE_STATUS_RECORD_COUNT="Records"
+
+COM_JSPACE_STORAGE_LABEL="Storage"
+COM_JSPACE_STORAGE_CONFIG_LABEL="Configuration"
+COM_JSPACE_STORAGE_ERRORS_LABEL="Errors"
+COM_JSPACE_STORAGE_NONE="No storage plugins have been enabled. To store assets as well as metadata, ensure that at least one storage plugin has been enabled and correctly configured."
+
+COM_JSPACE_HARVEST_LABEL="Harvesting"
+COM_JSPACE_HARVESTING_LABEL="Harvesting is %s"
