JSPACE-82 clean up of OAI. Merge OAI branch into master. Rewrite of Request.

--- a/components/com_jspace/admin/language/en-GB/en-GB.com_jspace.ini
+++ b/components/com_jspace/admin/language/en-GB/en-GB.com_jspace.ini
@@ -392,3 +392,20 @@ COM_JSPACE_STORAGE_NONE="No storage plugins have been enabled. To store assets a
 
 COM_JSPACE_HARVEST_LABEL="Harvesting"
 COM_JSPACE_HARVESTING_LABEL="Harvesting is %s"
+
+COM_JSPACE_FIELDSET_OAI_LABEL="OAI"
+COM_JSPACE_FIELDSET_OAI_DESCRIPTION="OAI setup"
+COM_JSPACE_FIELD_OAI_ENABLED_LABEL="Enable OAI"
+COM_JSPACE_FIELD_OAI_ENABLED_DESCRIPTION="Enables/disables OAI functionality in JSpace."
+COM_JSPACE_FIELD_OAI_ACCESSLEVEL_LABEL="Access Level"
+COM_JSPACE_FIELD_OAI_ACCESSLEVEL_DESC="The access level of categories and records which are available for harvesting. You should only need to change this if you define custom access levels."
+COM_JSPACE_FIELD_OAI_REPOSITORY_NAME_LABEL="Repository name"
+COM_JSPACE_FIELD_OAI_REPOSITORY_NAME_DESCRIPTION="JSpace repository name returned by Identify"
+COM_JSPACE_FIELD_OAI_EARLIEST_DATESTAMP_LABEL="Earliest datestamp"
+COM_JSPACE_FIELD_OAI_EARLIEST_DATESTAMP_DESCRIPTION="Date of the earliest item that will be returned by OAI"
+COM_JSPACE_FIELD_OAI_GRANULARITY_LABEL="Date granularity"
+COM_JSPACE_FIELD_OAI_GRANULARITY_DESCRIPTION="Set date granularity: day, or second"
+COM_JSPACE_FIELD_OAI_ADMINISTRATORS_EMAILS_LABEL="OAI administrators' emails"
+COM_JSPACE_FIELD_OAI_ADMINISTRATORS_EMAILS_DESCRIPTION="OAI administrators' emails separated by ';'."
+COM_JSPACE_FIELD_OAI_IGNORECATEGORIES_LABEL="Ignore Categories"
+COM_JSPACE_FIELD_OAI_IGNORECATEGORIES_DESC="Specify one or more categories which should be inaccessible to harvesters. By default, a published or archived category is available for harvest. Only records directly under the specified category will be inaccessible; any sub-categories will still be available for harvest."
