--- a/components/com_jspace/admin/language/en-GB/en-GB.com_jspace.sys.ini
+++ b/components/com_jspace/admin/language/en-GB/en-GB.com_jspace.sys.ini
@@ -18,3 +18,6 @@ COM_JSPACE_RECORDS="Records"
 COM_JSPACE_HARVESTS="Harvests"
 
 COM_JSPACE_CLI_DESCRIPTION="Command line tools for managing JSpace information."
+
+COM_JSPACE_OAI_LAYOUT_TITLE="OAI item"
+COM_JSPACE_OAI_LAYOUT_DESC=""
