--- a/components/com_jspace/site/language/en-GB/en-GB.com_jspace.ini
+++ b/components/com_jspace/site/language/en-GB/en-GB.com_jspace.ini
@@ -11,3 +11,17 @@ COM_JSPACE_PUBLISHED_DATE_ON="Published: %s"
 COM_JSPACE_READ_MORE="Log in to view more"
 COM_JSPACE_NO_RECORDS="No records found."
 COM_JSPACE_ERROR_RECORD_NOT_FOUND="No record found."
+
+COM_JSPACE_OAI_PMH_EXCEPTION_BAD_VERB="Value of the verb argument is not a legal OAI-PMH verb, the verb argument is missing, or the verb argument is repeated. (verb=%s)"
+COM_JSPACE_OAI_PMH_EXCEPTION_BAD_ARGUMENT="The request includes illegal arguments, is missing required arguments, includes a repeated argument, or values for arguments have an illegal syntax."
+COM_JSPACE_OAI_PMH_EXCEPTION_BAD_ARGUMENT_XML_MSG="The request includes illegal arguments, is missing required arguments, includes a repeated argument, or values for arguments have an illegal syntax."
+COM_JSPACE_OAI_PMH_EXCEPTION_BAD_RESUMPTION_TOKEN="The value of the resumptionToken argument is invalid or expired."
+COM_JSPACE_OAI_PMH_EXCEPTION_BAD_RESUMPTION_TOKEN_XML_MSG="The value of the resumptionToken argument is invalid or expired."
+COM_JSPACE_OAI_PMH_EXCEPTION_ID_DOES_NOT_EXIST="The value of the identifier argument is unknown or illegal in this repository. id=%s"
+COM_JSPACE_OAI_PMH_EXCEPTION_ID_DOES_NOT_EXIST_XML_MSG="The value of the identifier argument is unknown or illegal in this repository."
+COM_JSPACE_OAI_PMH_EXCEPTION_CANNOT_DISSEMINATE_FORMAT="The metadata format identified by the value given for the metadataPrefix argument is not supported by the item or by the repository. metadataPrefix=%s"
+COM_JSPACE_OAI_PMH_EXCEPTION_CANNOT_DISSEMINATE_FORMAT_XML_MSG="The metadata format identified by the value given for the metadataPrefix argument is not supported by the item or by the repository."
+COM_JSPACE_OAI_PMH_EXCEPTION_NO_RECORDS_MATCH="The combination of the values of the from, until, set and metadataPrefix arguments results in an empty list."
+COM_JSPACE_OAI_PMH_EXCEPTION_NO_RECORDS_MATCH_XML_MSG="The combination of the values of the from, until, set and metadataPrefix arguments results in an empty list."
+COM_JSPACE_OAI_PMH_EXCEPTION_NO_METADATA_FORMATS="There are no metadata formats available for the specified item."
+COM_JSPACE_OAI_PMH_EXCEPTION_NO_METADATA_FORMATS_XML_MSG="There are no metadata formats available for the specified item."
