--- a/libraries/jspace/language/en-GB/en-GB.lib_jspace.ini
+++ b/libraries/jspace/language/en-GB/en-GB.lib_jspace.ini
@@ -1,2 +1,13 @@
 LIB_JSPACE="JSpace Library"
 LIB_JSPACE_XML_DESCRIPTION="The JSpace library provides a programming interface for the JSpace archiving system."
+
+LIB_JSPACE_OAI_EXCEPTION_BADVERB_LABEL="Illegal OAI verb"
+LIB_JSPACE_OAI_EXCEPTION_NOMETADATAFORMATS_LABEL="No metadata formats are available for the current request."
+LIB_JSPACE_OAI_EXCEPTION_BADARGUMENT_LABEL="The request includes illegal arguments, is missing required arguments, includes a repeated argument, or values for arguments have an illegal syntax."
+LIB_JSPACE_OAI_EXCEPTION_IDDOESNOTEXIST_LABEL="The identifier specified either doesn't exist or is malformed."
+LIB_JSPACE_OAI_EXCEPTION_NORECORDSMATCH_LABEL="No records found."
+LIB_JSPACE_OAI_EXCEPTION_CANNOTDISSEMINATEFORMAT_LABEL="The metadata prefix is not supported by the current record or repository."
+COM_JSPACE_FIELD_OAI_RESUMPTIONTOKENEXPIRES_LABEL="Resumption Token Expires"
+COM_JSPACE_FIELD_OAI_RESUMPTIONTOKENEXPIRES_DESC="Expire the resumption token after a certain period of time has passed. It is recommended that resumption tokens are expired on a regular basis to prevent malicious harvesting which may affect JSpace's performance. However, it may be necessary to adjust the duration of resumption tokens especially if harvesters are taking a long time to harvest an entire record set or if the record sets being harvested are especially large. The default is to expire a token after one week."
+LIB_JSPACE_OAI_EXCEPTION_RESUMPTIONTOKENEXPIRED_LABEL="The resumption token has expired."
+LIB_JSPACE_OAI_EXCEPTION_BADRESUMPTIONTOKEN_LABEL="The resumption token appears to be invalid."
