JSPACE-33 Filter results on a default lower limit datestamp.

--- a/components/com_jspace/admin/language/en-GB/en-GB.com_jspace.ini
+++ b/components/com_jspace/admin/language/en-GB/en-GB.com_jspace.ini
@@ -394,18 +394,22 @@ COM_JSPACE_HARVEST_LABEL="Harvesting"
 COM_JSPACE_HARVESTING_LABEL="Harvesting is %s"
 
 COM_JSPACE_FIELDSET_OAI_LABEL="OAI"
-COM_JSPACE_FIELDSET_OAI_DESCRIPTION="OAI setup"
+COM_JSPACE_FIELDSET_OAI_DESCRIPTION="Specify your OAI provider settings."
 COM_JSPACE_FIELD_OAI_ENABLED_LABEL="Enable OAI"
 COM_JSPACE_FIELD_OAI_ENABLED_DESCRIPTION="Enables/disables OAI functionality in JSpace."
 COM_JSPACE_FIELD_OAI_ACCESSLEVEL_LABEL="Access Level"
 COM_JSPACE_FIELD_OAI_ACCESSLEVEL_DESC="The access level of categories and records which are available for harvesting. You should only need to change this if you define custom access levels."
-COM_JSPACE_FIELD_OAI_REPOSITORY_NAME_LABEL="Repository name"
-COM_JSPACE_FIELD_OAI_REPOSITORY_NAME_DESCRIPTION="JSpace repository name returned by Identify"
-COM_JSPACE_FIELD_OAI_EARLIEST_DATESTAMP_LABEL="Earliest datestamp"
-COM_JSPACE_FIELD_OAI_EARLIEST_DATESTAMP_DESCRIPTION="Date of the earliest item that will be returned by OAI"
-COM_JSPACE_FIELD_OAI_GRANULARITY_LABEL="Date granularity"
-COM_JSPACE_FIELD_OAI_GRANULARITY_DESCRIPTION="Set date granularity: day, or second"
-COM_JSPACE_FIELD_OAI_ADMINISTRATORS_EMAILS_LABEL="OAI administrators' emails"
+COM_JSPACE_FIELD_OAI_REPOSITORY_NAME_LABEL="Repository Name"
+COM_JSPACE_FIELD_OAI_REPOSITORY_NAME_DESCRIPTION="The name used to identify your repository."
+COM_JSPACE_FIELD_OAI_EARLIEST_DATESTAMP_LABEL="Earliest Datestamp"
+COM_JSPACE_FIELD_OAI_EARLIEST_DATESTAMP_DESC="Date of the earliest record that will be returned by the OAI provider."
+COM_JSPACE_FIELD_OAI_RESUMPTIONTOKENEXPIRES_LABEL="Resumption Token Expires"
+COM_JSPACE_FIELD_OAI_RESUMPTIONTOKENEXPIRES_DESC="Expire the resumption token after a certain period of time has passed. It is recommended that resumption tokens are expired on a regular basis to prevent malicious harvesting which may affect JSpace's performance. However, it may be necessary to adjust the duration of resumption tokens especially if harvesters are taking a long time to harvest an entire record set or if the record sets being harvested are especially large. The default is to expire a token after one week."
+COM_JSPACE_FIELD_OAI_RESUMPTIONTOKENEXPIRES_NEVER="Never"
+COM_JSPACE_FIELD_OAI_RESUMPTIONTOKENEXPIRES_1DAY="After 1 day"
+COM_JSPACE_FIELD_OAI_RESUMPTIONTOKENEXPIRES_1WEEK="After 1 week"
+COM_JSPACE_FIELD_OAI_RESUMPTIONTOKENEXPIRES_1MONTH="After 1 month"
+COM_JSPACE_FIELD_OAI_ADMINISTRATORS_EMAILS_LABEL="OAI Administrator Emails"
 COM_JSPACE_FIELD_OAI_ADMINISTRATORS_EMAILS_DESCRIPTION="OAI administrators' emails separated by ';'."
 COM_JSPACE_FIELD_OAI_IGNORECATEGORIES_LABEL="Ignore Categories"
 COM_JSPACE_FIELD_OAI_IGNORECATEGORIES_DESC="Specify one or more categories which should be inaccessible to harvesters. By default, a published or archived category is available for harvest. Only records directly under the specified category will be inaccessible; any sub-categories will still be available for harvest."
