JSPACE-34 provide both an HTML human readable page and the XML endpoints.

--- a/components/com_jspace/site/language/en-GB/en-GB.com_jspace.ini
+++ b/components/com_jspace/site/language/en-GB/en-GB.com_jspace.ini
@@ -25,3 +25,23 @@ COM_JSPACE_OAI_PMH_EXCEPTION_NO_RECORDS_MATCH="The combination of the values of 
 COM_JSPACE_OAI_PMH_EXCEPTION_NO_RECORDS_MATCH_XML_MSG="The combination of the values of the from, until, set and metadataPrefix arguments results in an empty list."
 COM_JSPACE_OAI_PMH_EXCEPTION_NO_METADATA_FORMATS="There are no metadata formats available for the specified item."
 COM_JSPACE_OAI_PMH_EXCEPTION_NO_METADATA_FORMATS_XML_MSG="There are no metadata formats available for the specified item."
+
+COM_JSPACE_OAI_HEADING="Open Archive Initiative (OAI-PMH) Provider"
+COM_JSPACE_OAI_INTRODUCTION="The Open Archives Initiative Protocol for Metadata Harvesting (also known as OAI-PMH) provides an application-independent interoperability framework based on metadata harvesting.<br/>Below are a list of OAI-PMH urls which you can use to access metadata and assets from this archive.<br/>For more information about OAI-PMH, check out <a href="_QQ_"http://www.openarchives.org/OAI/openarchivesprotocol.html"_QQ_">http://www.openarchives.org/OAI/openarchivesprotocol.html</a>"
+COM_JSPACE_OAI_IDENTIFY="Provides information about this repository. Identify informs harvesters how certain information, such as dates and identifiers, is provided."
+COM_JSPACE_OAI_LISTMETADATAFORMATS="Lists the metadata formats available from this archive. Some formats are specifically designed to provide information about assets, whilst others provide metadata in different formats."
+COM_JSPACE_OAI_LISTSETS="Lists the available categories."
+COM_JSPACE_OAI_LISTIDENTIFIERS="Lists archived records, providing header information only (the record identifier and the date it was published). Use this endpoint to check for new records or whether records have been updated or deleted."
+COM_JSPACE_OAI_LISTRECORDS="Lists archived records, providing both header information and metadata."
+COM_JSPACE_OAI_GETRECORD="Gets a single record from the archive. PLEASE NOTE: This endpoint will only work when an identifier is provided."
+COM_JSPACE_OAI_ARGUMENTS_LABEL="Arguments"
+COM_JSPACE_OAI_LISTMETADATAFORMATS_ARGUMENTS_IDENTIFIER="<strong>identifier (optional)</strong> - Check which metadata formats are supported for an individual item."
+
+COM_JSPACE_OAI_ARGUMENTS_METADATAPREFIX="<strong>metadataPrefix (mandatory)</strong> - The metadata format to use to return the record information in. The list of metadata formats can be obtained using the ListMetadataFormats endpoint."
+COM_JSPACE_OAI_ARGUMENTS_FROM="<strong>from (optional)</strong> - The earliest date that records were published on. The date must take the form YYYY-MM-DDThh:mm:ssZ."
+COM_JSPACE_OAI_ARGUMENTS_UNTIL="<strong>until (optional)</strong> - The latest date that records were published on. The date must take the form YYYY-MM-DDThh:mm:ssZ."
+COM_JSPACE_OAI_ARGUMENTS_SET="<strong>set (optional)</strong> - The category the records belong to. Use ListSets to obtain a list of available categories."
+
+COM_JSPACE_OAI_ARGUMENTS_GETRECORD_IDENTIFIER="<strong>identifier (optional)</strong> - Specify the metadata format the item should be returned as."
+
+COM_JSPACE_OAI_ARGUMENTS_RESUMPTIONTOKEN="ListSets, ListIdentifiers and ListRecords provide a resumption token for returning large record sets. The resumption token is available at the bottom of the first request to any of these endpoints."
